# caputchin-sdk

./: .gitignore  .release-please-manifest.json  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  TRADEMARK.md  codecov.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  qa-notes.md  release-please-config.json  tsconfig.base.json  typedoc.base.json
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-skills.yml  release.yml
.husky/: pre-commit
examples/: demo.html  failing-game.js  multi-round-game.js  simple-game.js
kits/determinism/: CHANGELOG.md  README.md  package.json
kits/determinism/docs/: Function.acos.md  Function.asin.md  Function.atan.md  Function.atan2.md  Function.bannedProxy.md  Function.cbrt.md  Function.cos.md  Function.cosh.md  Function.createMathRandomTrap.md  Function.exp.md  Function.expm1.md  Function.hypot.md  Function.log.md  Function.log10.md  Function.log1p.md  Function.log2.md  Function.makeDeterministic.md  Function.mulberry32.md  Function.pow.md  Function.resolveMathScope.md  Function.sealHeadlessAmbient.md  Function.seedRandom.md  Function.sin.md  Function.sinh.md  Function.swapMathInto.md  Function.tan.md  Function.tanh.md  Function.withDeterministicEnv.md  Interface.AmbientSurface.md  Interface.DeterministicEnv.md  Interface.Rng.md  README.md  TypeAlias.AmbientKind.md  TypeAlias.RngState.md  Variable.AMBIENT_SURFACES.md  Variable.BAN_ALL_SURFACES.md  Variable.E.md  Variable.ENV_VERSION.md  Variable.HALF_PI.md  Variable.PI.md  (+12 more)
kits/determinism/src/: ambient.test.ts  ambient.ts  env.test.ts  env.ts  headless-dom.test.ts  headless-dom.ts  index.ts  math-random.test.ts  math-random.ts  math.test.ts  rng.test.ts  rng.ts  shim.ts  version.ts
kits/engine-kit/: CHANGELOG.md  README.md  package.json  tsup.config.ts
kits/engine-kit/docs/: Function.decodeTrace.md  Function.encodeTrace.md  Function.isHumanReaction.md  Function.reactionFloorTicks.md  Function.replay.md  Function.toRun.md  Interface.EngineSetup.md  Interface.ReplayInput.md  Interface.Result.md  Interface.ToRunOptions.md  README.md  Variable.REACTION_FLOOR_MS.md
kits/engine-kit/src/: cli.ts  define-engine.ts  harness.test.ts  index.ts  reaction.test.ts  reaction.ts  self-check.test.ts  to-run.test.ts  to-run.ts  trace-codec.test.ts  trace-codec.ts  validate-trace.test.ts  validate-trace.ts  version.test.ts  version.ts
kits/engine-runtime/: package.json  typedoc.json
kits/engine-runtime/docs/: Function.parseVerdict.md  Function.project.md  Function.rng.md  Variable.cap.md  (+10 more)
kits/replay-rs/: CHANGELOG.md  Cargo.toml  README.md
kits/replay-rs/src/: lib.rs
kits/replay-rs/tests/: live.rs  macro.rs
kits/replay-selfcheck/: CHANGELOG.md  README.md  package.json  tsup.config.ts  typedoc.json
kits/replay-wasm/: CHANGELOG.md  README.md  package.json
plugins/caputchin/: PUBLISHING.md  README.md
presets/: README.md
presets/bevy/: .gitignore  Cargo.toml  README.md  caputchin.json  cargo-generate.toml  package.json  tsconfig.json  tsup.config.ts
presets/bevy/scripts/: build-wasm.sh
presets/bevy/src/: config.ts  lib.rs  run.ts  sim.rs
presets/excalibur/: CHANGELOG.md  README.md  package.json  tsup.config.ts  typedoc.json  vitest.config.ts
presets/kaplay/: CHANGELOG.md  README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
presets/melonjs/: CHANGELOG.md  README.md  package.json  tsconfig.json  tsup.config.ts
presets/phaser/: CHANGELOG.md  README.md  package.json  tsconfig.json  tsup.config.ts  typedoc.json
presets/rapier/: .gitignore  Cargo.toml  README.md  caputchin.json  cargo-generate.toml  package.json  tsconfig.json  tsup.config.ts
presets/rapier/.caputchin/: configurations.json
presets/rapier/scripts/: build-wasm.sh
presets/rapier/src/: config.ts  lib.rs  run.ts  sim.rs
scripts/: normalize-docs.mjs
(+195 files in other folders)
